--- a/assets/sub.css
+++ b/assets/sub.css
@@ -2,63 +2,208 @@
 /* 초기화 */
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 @import url("header.css");
-* { -webkit-box-sizing: border-box; box-sizing: border-box; font-size: 16px; }
+* {
+  box-sizing: border-box;
+  font-size: 16px; }
 
-body { margin: 0; font-family: 'Noto Sans KR', sans-serif; letter-spacing: -.5px; }
+body {
+  margin: 0;
+  font-family: 'Noto Sans KR', sans-serif;
+  letter-spacing: -.5px; }
 
-ul { list-style: none; padding: 0; margin: 0; }
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0; }
 
-h1, h2, h3, h4, h5, h6 { margin: 0; }
+h1, h2, h3, h4, h5, h6 {
+  margin: 0; }
 
-a { text-decoration: none; display: block; }
+a {
+  text-decoration: none;
+  display: block; }
 
-a:hover { color: var(--main); }
+a:hover {
+  color: var(--main); }
 
-a:visited { color: #333; }
+a:visited {
+  color: #333; }
 
-:root { --main: #648FFF; --sub1: #8C64FF; --sub2: #FF6464; }
+:root {
+  --main: #648FFF;
+  --sub1: #8C64FF;
+  --sub2: #FF6464; }
 
-body { background: #eee; }
+body {
+  background: #eee; }
 
-.container { position: relative; z-index: 1; top: 53px; max-width: 800px; height: 100%; margin: 0 auto; }
-.container > div:first-child { overflow: hidden; border-radius: 0 0 14px 14px; max-width: 800px; height: 200px; }
-.container > div:first-child > img { display: block; width: 100%; height: auto; }
+.container {
+  position: relative;
+  z-index: 1;
+  top: 53px;
+  max-width: 800px;
+  height: 100%;
+  margin: 0 auto; }
+  .container > div:first-child {
+    overflow: hidden;
+    border-radius: 0 0 14px 14px;
+    max-width: 800px;
+    height: 200px; }
+    .container > div:first-child > img {
+      display: block;
+      width: 100%;
+      height: auto; }
 
-.main { position: absolute; z-index: 2; top: 34px; padding-bottom: 80px; left: 50%; -webkit-transform: translate(-50%); transform: translate(-50%); height: auto; width: 88%; margin: 0 auto; }
-.main > section:nth-child(1) { display: block; width: 100%; height: 36px; border-radius: 18px; background: #fff; margin-bottom: 20px; }
-.main > section:nth-child(1) > p { display: inline-block; text-align: center; font-size: 14px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
-.main > section:nth-child(1) > p > span { font-size: 13px; letter-spacing: .5px; margin-top: 8px; padding: 0 .5rem; }
-.main > section:nth-child(1) > p > span:nth-child(2) { color: #ccc; }
-.main > section:nth-child(2) { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100%; }
-.main > section:nth-child(2) > a:nth-child(1) { margin-right: .4em; }
-.main > section:nth-child(2) > a:nth-child(2) { margin-right: .4em; }
-.main > section:nth-child(2) > a { border-radius: 14px; background: #fff; width: 100%; height: 153px; text-align: center; -webkit-box-flex: 1; -ms-flex: 1; flex: 1; padding: 14px 0; }
-.main > section:nth-child(2) > a > hr { display: inline-block; width: 70%; padding: 0; height: 1px; border: none; background: #eee; }
-.main > section:nth-child(2) > a > p { font-size: 14px; margin: 0; }
-.main > section:nth-child(2) > a > p > img { height: 53px; padding: 4px 0; }
-.main > section:nth-child(3).tableDefault { margin-top: 20px; padding-bottom: 14px; border-radius: 14px; height: auto; }
-.main > section:nth-child(3).tableDefault > h1:first-child { color: var(--sub1); }
-.main > section:nth-child(3).tableDefault > h1, .main > section:nth-child(3).tableDefault h2 { display: block; font-size: 16px; text-align: center; padding-top: 18px; }
-.main > section:nth-child(3).tableDefault > table { padding: 5%; width: 100%; }
-.main > section:nth-child(3).tableDefault > table tr > th, .main > section:nth-child(3).tableDefault > table tr > td { border-top: 1px solid #ccc; font-size: 14px; padding: 8px 10px; }
-.main > section:nth-child(3).tableDefault > table tr > th { font-weight: 500; letter-spacing: .5px; }
-.main > section:nth-child(3).tableDefault > table tr:last-child > td, .main > section:nth-child(3).tableDefault > table tr:last-child > th { border-bottom: 1px solid #ccc; }
-.main > section:nth-child(3).tableDefault > table:last-child tr td:last-child { text-align: right; padding-right: 4px; letter-spacing: .2px; font-weight: 400; font-size: 12px; }
+.main {
+  position: absolute;
+  z-index: 2;
+  top: 34px;
+  padding-bottom: 80px;
+  left: 50%;
+  transform: translate(-50%);
+  height: auto;
+  width: 88%;
+  margin: 0 auto; }
+  .main > section:nth-child(1) {
+    display: block;
+    width: 100%;
+    height: 36px;
+    border-radius: 18px;
+    background: #fff;
+    margin-bottom: 20px; }
+    .main > section:nth-child(1) > p {
+      display: inline-block;
+      text-align: center;
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+      .main > section:nth-child(1) > p > span {
+        font-size: 13px;
+        letter-spacing: .5px;
+        margin-top: 8px;
+        padding: 0 .5rem; }
+      .main > section:nth-child(1) > p > span:nth-child(2) {
+        color: #ccc; }
+  .main > section:nth-child(2) {
+    display: flex;
+    width: 100%; }
+    .main > section:nth-child(2) > a:nth-child(1) {
+      margin-right: .4em; }
+    .main > section:nth-child(2) > a:nth-child(2) {
+      margin-right: .4em; }
+    .main > section:nth-child(2) > a {
+      border-radius: 14px;
+      background: #fff;
+      width: 100%;
+      height: 153px;
+      text-align: center;
+      flex: 1;
+      padding: 14px 0; }
+      .main > section:nth-child(2) > a > hr {
+        display: inline-block;
+        width: 70%;
+        padding: 0;
+        height: 1px;
+        border: none;
+        background: #eee; }
+      .main > section:nth-child(2) > a > p {
+        font-size: 14px;
+        margin: 0; }
+        .main > section:nth-child(2) > a > p > img {
+          height: 53px;
+          padding: 4px 0; }
+  .main > section:nth-child(3).tableDefault {
+    margin-top: 20px;
+    padding-bottom: 14px;
+    border-radius: 14px;
+    height: auto; }
+    .main > section:nth-child(3).tableDefault > h1:first-child {
+      color: var(--sub1); }
+    .main > section:nth-child(3).tableDefault > h1, .main > section:nth-child(3).tableDefault h2 {
+      display: block;
+      font-size: 16px;
+      text-align: center;
+      padding-top: 18px; }
+    .main > section:nth-child(3).tableDefault > table {
+      padding: 5%;
+      width: 100%; }
+      .main > section:nth-child(3).tableDefault > table tr > th, .main > section:nth-child(3).tableDefault > table tr > td {
+        border-top: 1px solid #ccc;
+        font-size: 14px;
+        padding: 8px 10px; }
+      .main > section:nth-child(3).tableDefault > table tr > th {
+        font-weight: 500;
+        letter-spacing: .5px; }
+      .main > section:nth-child(3).tableDefault > table tr:last-child > td, .main > section:nth-child(3).tableDefault > table tr:last-child > th {
+        border-bottom: 1px solid #ccc; }
+    .main > section:nth-child(3).tableDefault > table:last-child tr td:last-child {
+      text-align: right;
+      padding-right: 4px;
+      letter-spacing: .2px;
+      font-weight: 400;
+      font-size: 12px; }
 
-.popup, .popupBg { display: none; }
+.popup, .popupBg {
+  display: none; }
 
-.popup { position: fixed; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); z-index: 99999; width: 480px; border-radius: 8px; background: #fff; }
-.popup p { margin: 0; word-break: keep-all; }
-@media (max-width: 480px) { .popup { width: 90%; } }
-.popup > article { padding: 14px 24px; position: relative; }
-.popup > article > section { margin-top: 44px; }
-.popup > article > section > i { display: block; position: absolute; right: 24px; top: 20px; font-size: 20px; color: #555; }
-.popup > article > section > div { display: block; padding: 18px 0; display: -webkit-box; display: -ms-flexbox; display: flex; }
-.popup > article > section > div button { width: 100%; padding: 8px 0; border: none; cursor: pointer; border-radius: 4px; background: #aaa; color: #fff; }
-.popup > article > section > div button:last-child { background: #648FFF; }
-.popup > article > section > div button:not(:last-child) { margin-right: 10px; }
-.popup > article > section > div textarea { margin-top: 10px; border: 1px solid #ccc; border-radius: 4px; }
+.popup {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 99999;
+  width: 480px;
+  border-radius: 8px;
+  background: #fff; }
+  .popup p {
+    margin: 0;
+    word-break: keep-all; }
+  @media (max-width: 480px) {
+    .popup {
+      width: 90%; } }
+  .popup > article {
+    padding: 14px 24px;
+    position: relative; }
+    .popup > article > section {
+      margin-top: 44px; }
+      .popup > article > section > i {
+        display: block;
+        position: absolute;
+        right: 24px;
+        top: 20px;
+        font-size: 20px;
+        color: #555; }
+      .popup > article > section > div {
+        display: block;
+        padding: 18px 0;
+        display: flex; }
+        .popup > article > section > div button {
+          width: 100%;
+          padding: 8px 0;
+          border: none;
+          cursor: pointer;
+          border-radius: 4px;
+          background: #aaa;
+          color: #fff; }
+        .popup > article > section > div button:last-child {
+          background: #648FFF; }
+        .popup > article > section > div button:not(:last-child) {
+          margin-right: 10px; }
+        .popup > article > section > div textarea {
+          margin-top: 10px;
+          border: 1px solid #ccc;
+          border-radius: 4px; }
 
-.popupBg { position: fixed; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); z-index: 99998; width: 100%; height: 100%; background: #111; opacity: .5; }
+.popupBg {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 99998;
+  width: 100%;
+  height: 100%;
+  background: #111;
+  opacity: .5; }
 
 /*# sourceMappingURL=sub.css.map */
