--- a/assets/company-info.css
+++ b/assets/company-info.css
@@ -30,7 +30,8 @@ button { width: 100%; height: 40px; background: #6A5ACD; border: none; color: #f
 
 .co_tabContent { margin-top: .5rem; background: #fff; border-radius: 0 0 14px 14px; }
 .co_tabContent table { border-collapse: collapse; width: 100%; }
-.co_tabContent table tr { display: -webkit-box; display: -ms-flexbox; display: flex; }
+.co_tabContent table tr { display: -webkit-box; display: -ms-flexbox; display: flex; position: relative; }
+.co_tabContent table tr a { position: absolute; border: 1px solid red; }
 .co_tabContent table tr td { -webkit-box-flex: .2; -ms-flex: .2; flex: .2; border-bottom: 2px solid #E6E4F0; border-right: 2px solid #E6E4F0; padding: 8px 14px; }
 .co_tabContent table tr td:nth-child(2) { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; }
 .co_tabContent table tr td:last-child { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; border-right: none; }
