--- a/assets/company-info.scss
+++ b/assets/company-info.scss
@@ -134,6 +134,11 @@ button {
     width: 100%;
     tr {
       display: flex;
+      position: relative;
+      a {
+        position: absolute;
+        border: 1px solid red;
+      }
       td {
         flex: .2;
         border-bottom: 2px solid #E6E4F0;
