--- a/assets/slick/slick-theme.css
+++ b/assets/slick/slick-theme.css
@@ -24,7 +24,7 @@
 /* Dots */
 .slick-dotted.slick-slider { margin-bottom: 30px; }
 
-.slick-dots { position: absolute; bottom: -25px; list-style: none; display: block; text-align: center; padding: 1rem; margin: 0; width: 100%; }
+.slick-dots { position: absolute; bottom: 0; list-style: none; display: block; text-align: center; padding: 1rem; margin: 0; width: 100%; }
 .slick-dots li { position: relative; display: inline-block; height: 20px; width: 20px; margin: 0 5px; padding: 0; cursor: pointer; }
 .slick-dots li button { border: 0; background: transparent; display: block; height: 20px; width: 20px; outline: none; line-height: 0px; font-size: 0px; color: transparent; padding: 5px; cursor: pointer; }
 .slick-dots li button:hover, .slick-dots li button:focus { outline: none; }
