--- a/assets/slickCustom.css
+++ b/assets/slickCustom.css
@@ -14,4 +14,6 @@
 
 .co_wrapper > article > .content :nth-child(3) > button { width: auto; }
 
+button { margin-top: 0; }
+
 /*# sourceMappingURL=slickCustom.css.map */
