--- a/assets/company.css
+++ b/assets/company.css
@@ -5,7 +5,7 @@ h1 { font-weight: 500; font-size: 18px; }
 
 h2 { display: inline-block; font-weight: 300; font-size: 16px; }
 
-.container { position: relative; z-index: 1; top: 83px; max-width: 800px; height: 100%; margin: 0 auto; }
+.container { padding-top: 1.5rem; position: relative; z-index: 1; max-width: 800px; height: 100%; margin: 0 auto; }
 
 strong { font-weight: 500; }
 
