--- a/assets/company.scss
+++ b/assets/company.scss
@@ -5,8 +5,8 @@ body {
 h1 {font-weight: 500;font-size: 18px;}
 h2 {display: inline-block; font-weight: 300; font-size: 16px;}
 .container {
+  padding-top: 1.5rem;
     position: relative; z-index: 1;
-    top: 83px;
     max-width: 800px;
     height: 100%;
     margin: 0 auto;
