--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,9 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 @import url("header.css");
 @font-face { font-family: 'GmarketSansMedium'; src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff") format("woff"); font-weight: normal; font-style: normal; }
-.height { height: 56px; }
+.height { height: 54px; }
+
+p { margin: 0; padding: 0; }
 
 * { -webkit-box-sizing: border-box; box-sizing: border-box; font-size: 16px; }
 
@@ -25,7 +27,7 @@ a:visited, a:active { color: #333; }
 
 body { background: #DBE7EE; }
 
-.container { position: relative; z-index: 1; top: 53px; max-width: 800px; height: 100%; margin: 0 auto; }
+.container { position: relative; z-index: 1; max-width: 800px; height: 100%; margin: 0 auto; }
 .container > div:first-child { overflow: hidden; border-radius: 0 0 14px 14px; max-width: 800px; height: 200px; }
 .container > div:first-child > img { display: block; width: 100%; height: auto; }
 
