--- a/assets/style.scss
+++ b/assets/style.scss
@@ -9,8 +9,8 @@
     font-style: normal;
 }
 // ↓↓↓↓ 헤더윗부분 여백제거 ↓↓↓↓  주석처리 시 윗공간 사라집니다....
-.height {height: 56px;}
-
+.height {height: 54px;}
+p {margin:0;padding:0;}
 
 * {box-sizing: border-box; font-size: 16px;}
 body {margin:0; font-family: 'Noto Sans KR', sans-serif; letter-spacing: -.5px;}
@@ -33,7 +33,7 @@ body {
 
 .container {
     position: relative; z-index: 1;
-    top: 53px;
+    // top: 53px;
     max-width: 800px;
     height: 100%;
     margin: 0 auto;
