--- a/assets/sub.css
+++ b/assets/sub.css
@@ -20,12 +20,14 @@ a:visited { color: #333; }
 
 body { background: #DBE7EE; }
 
-.container { position: relative; z-index: 1; top: 53px; max-width: 800px; height: 100%; margin: 0 auto; }
-.container > div:first-child { overflow: hidden; border-radius: 0 0 14px 14px; max-width: 800px; height: 200px; }
-.container > div:first-child > img { display: block; width: 100%; height: auto; }
+.height { height: 54px; }
 
-.main { position: absolute; z-index: 2; top: 34px; padding-bottom: 80px; left: 50%; -webkit-transform: translate(-50%); transform: translate(-50%); height: auto; width: 88%; margin: 0 auto; }
-.main > section:nth-child(1) { display: block; width: 100%; height: 36px; border-radius: 18px; background: #fff; margin-bottom: 20px; }
+p { margin: 0; padding: 0; }
+
+.container { position: relative; z-index: 1; max-width: 800px; margin: 0 auto; }
+
+.main { padding-bottom: 80px; width: 88%; margin: 0 auto; }
+.main > section:nth-child(1) { display: block; width: 100%; height: 36px; border-radius: 18px; background: #fff; margin: 20px 0; }
 .main > section:nth-child(1) > p { display: inline-block; text-align: center; font-size: 14px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
 .main > section:nth-child(1) > p > span { font-size: 13px; letter-spacing: .5px; margin-top: 8px; padding: 0 .5rem; }
 .main > section:nth-child(1) > p > span:nth-child(2) { color: #ccc; }
