--- a/assets/sub.scss
+++ b/assets/sub.scss
@@ -14,39 +14,27 @@ a {text-decoration: none; display: block;} a:hover {color:var(--main)} a:visited
 body {
     background: #DBE7EE;
 }
+.height {height: 54px;}
+p {margin:0;padding:0;}
 @import url('header.css');
+header {
+}
 .container {
     position: relative; z-index: 1;
-    top: 53px;
     max-width: 800px;
-    height: 100%;
     margin: 0 auto;
-    > div:first-child {
-        overflow: hidden;
-        border-radius: 0 0 14px 14px;
-        max-width: 800px;
-        height: 200px;
-        > img {
-        display: block;
-        width: 100%;
-        height: auto;
-        }
-    }
+
 }
 .main {
-    position: absolute; z-index: 2;
-    top: 34px; padding-bottom: 80px;
-    left:50%;
-    transform: translate(-50%);
-    height: auto;
+    padding-bottom: 80px;
     width: 88%;
-    margin: 0 auto;
+    margin:0 auto;
     > section:nth-child(1) {
         display: block;
         width: 100%; height: 36px;
         border-radius: 18px;
         background: #fff;
-        margin-bottom: 20px;
+        margin: 20px 0;
         > p {
             display: inline-block;
             text-align: center; font-size: 14px;
