--- a/assets/company-info.scss
+++ b/assets/company-info.scss
@@ -173,21 +173,7 @@ background: #fff;
 input,select,table,textarea {
   width: 100%;  height: 40px;
 }
-// .arrowDown {
-//   position: relative;
-//   > .arrow > i {
-//     position: absolute;
-//     z-index: 20;
-//     top: 6px;
-//     right: 0;
-//     background: #fff;
-//     height: 40px;
-//     width: 40px;
-//     text-align: center;
-//     line-height: 2.5;
-//     border-radius: 0 8px 8px 0;
-//   }
-// }
+
 h1 {  padding: 1rem 0;}
 h2 {padding: 24px 0 14px;}
 
@@ -265,6 +251,8 @@ select {
     font-size: 14px;
     padding: .4rem 0;
     &:last-child {margin-bottom: 1rem;}
+    background: #fff !important;
+    border: none;
 
   }
 }
